--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
 
 
 @import url(https://fonts.googleapis.com/css?family=Questrial);
-@import url(http://fonts.googleapis.com/css?family=Dancing+Script:700); 
+@import url(http://fonts.googleapis.com/css?family=Dancing+Script:700);
+@import url(https://fonts.gooleapis.com/css?family=Helvetica);
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+
 
 html,
 body {
@@ -70,7 +73,7 @@ p {
 }
 
 .cursive {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Helvetica', cursive;
     text-transform: none;
 }
 
@@ -204,7 +207,7 @@ footer {
     }
 
     .navbar-default.affix .navbar-header .navbar-brand {
-        font-size: 15px;
+        font-size: 18px;
         color: #9c27b0;
         padding: 20px;
         letter-spacing: 1px;
@@ -246,15 +249,15 @@ header {
     -o-background-size: cover;
 }
 
-section #chromit {
+div #chromit {
     position: relative;
     min-height: 300px;
     text-align: center;
     width: 100%;
     margin: 0;
 
-    background-color: #333;
-    background-image: url();
+    background-color: #c9c9c9;
+    background-image: url(/assets/chromitBackground.jpeg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -262,7 +265,7 @@ section #chromit {
     -o-background-size: cover;
 }
 
-section #plotter {
+div #plotter {
     position: relative;
     min-height: 300px;
     text-align: center;
@@ -372,7 +375,8 @@ footer {
     }
 
     header .header-content .inner h1 {
-        font-size: 53px;
+        font-size: 60px;
+        font-weight: bold;
     }
 
     header .header-content .inner p {
@@ -444,6 +448,7 @@ textarea {
     margin: 0 auto;
     max-width: 650px;
     overflow:hidden;
+
 }
 
 .gallery-box .gallery-box-caption {
@@ -564,7 +569,7 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-xl {
-    padding: 15px 30px;
+    padding: 10px 30px;
     font-size: 20px;
 }
 
@@ -588,4 +593,306 @@ img::selection {
 img::-moz-selection {
     color: #fff;
     background: 0 0;
+}
+
+
+/* Basics */
+
+body {
+    font-family: "kepler-std", Georgia, serif;
+  }
+  
+  .headline {
+    font-weight: 400;
+    font-size: 4rem;
+  }
+  
+  @keyframes rotate-x-in {
+    0% {
+      transform: rotateX(90deg) translate(0, -100%);
+      opacity: 0;
+    }
+    100% {
+      transform: rotateX(0deg) translate(0, 0);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes rotate-x-out {
+    0% {
+      transform: rotateX(0deg) translate(0, 0);
+      opacity: 1;
+    }
+    100% {
+      transform: rotateX(-90deg) translate(0, 100%);
+      opacity: 0;
+    }
+  }
+  
+  .animate {
+    position: relative;
+    perspective: 500;
+  }
+  
+  .animate b.is-visible {
+    position: relative;
+    opacity: 1;
+    transform-origin: top center;
+    animation: rotate-x-in 1.5s;
+  }
+  
+  .animate b,
+  .animate b.is-hidden {
+    position: absolute;
+    display: inline-block;
+    opacity: 0;
+    transform-origin: bottom center;
+    left: 0;
+    top: 0;
+    animation: rotate-x-out 1.5s;
+  }
+
+
+/* -------------------------------- 
+
+Primary style
+
+-------------------------------- */
+*, *::after, *::before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  
+  html * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  html {
+    font-size: 62.5%;
+  }
+  
+  body {
+    font-size: 1.6rem;
+    font-family: "Source Sans Pro", sans-serif;
+    color: #aebcb9;
+    background-color: #0d0d0d;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  .cd-title {
+    position: relative;
+    height: 160px;
+    line-height: 230px;
+    text-align: center;
+  }
+  .cd-title h1 {
+    font-size: 2.4rem;
+    font-weight: 700;
+  }
+  @media only screen and (min-width: 768px) {
+    .cd-title {
+      line-height: 250px;
+    }
+  }
+  @media only screen and (min-width: 1170px) {
+    .cd-title {
+      height: 200px;
+      line-height: 300px;
+    }
+    .cd-title h1 {
+      font-size: 3rem;
+    }
+  }
+  
+  .cd-intro {
+    width: 90%;
+    max-width: 768px;
+    text-align: center;
+  }
+  
+  .cd-intro {
+    margin: 2em auto;
+  }
+  @media only screen and (min-width: 768px) {
+    .cd-intro {
+      margin: 5em auto;
+    }
+  }
+  @media only screen and (min-width: 1170px) {
+    .cd-intro {
+      margin: 6em auto;
+    }
+  }
+  
+  .cd-headline {
+    font-size: 2rem;
+    line-height: 1.0;
+  }
+  @media only screen and (min-width: 768px) {
+    .cd-headline {
+      font-size: 4.4rem;
+      font-weight: 300;
+    }
+  }
+  @media only screen and (min-width: 1170px) {
+    .cd-headline {
+      font-size: 6rem;
+    }
+  }
+  
+  .cd-words-wrapper {
+    display: inline-block;
+    position: relative;
+    text-align: left;
+  }
+  .cd-words-wrapper b {
+    display: inline-block;
+    position: absolute;
+    white-space: nowrap;
+    left: 0;
+    top: 0;
+  }
+  .cd-words-wrapper b.is-visible {
+    position: relative;
+  }
+  .no-js .cd-words-wrapper b {
+    opacity: 0;
+  }
+  .no-js .cd-words-wrapper b.is-visible {
+    opacity: 1;
+  }
+  
+
+ /*-----------------------------
+
+  xpush 
+
+-------------------------------- */
+.cd-headline.push b {
+  opacity: 0;
+}
+.cd-headline.push b.is-visible {
+  opacity: 1;
+  -webkit-animation: push-in 0.6s;
+  -moz-animation: push-in 0.6s;
+  animation: push-in 0.8s;
+}
+.cd-headline.push b.is-hidden {
+  -webkit-animation: push-out 0.6s;
+  -moz-animation: push-out 0.6s;
+  animation: push-out 0.8s;
+}
+
+@-webkit-keyframes push-in {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+  }
+  60% {
+    opacity: 1;
+    -webkit-transform: translateX(10%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+@-moz-keyframes push-in {
+  0% {
+    opacity: 0;
+    -moz-transform: translateX(-100%);
+  }
+  60% {
+    opacity: 1;
+    -moz-transform: translateX(10%);
+  }
+  100% {
+    opacity: 1;
+    -moz-transform: translateX(0);
+  }
+}
+@keyframes push-in {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  60% {
+    opacity: 1;
+    -webkit-transform: translateX(10%);
+    -moz-transform: translateX(10%);
+    -ms-transform: translateX(10%);
+    -o-transform: translateX(10%);
+    transform: translateX(10%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@-webkit-keyframes push-out {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+  60% {
+    opacity: 0;
+    -webkit-transform: translateX(110%);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+  }
+}
+@-moz-keyframes push-out {
+  0% {
+    opacity: 1;
+    -moz-transform: translateX(0);
+  }
+  60% {
+    opacity: 0;
+    -moz-transform: translateX(110%);
+  }
+  100% {
+    opacity: 0;
+    -moz-transform: translateX(100%);
+  }
+}
+@keyframes push-out {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  }
+  60% {
+    opacity: 0;
+    -webkit-transform: translateX(110%);
+    -moz-transform: translateX(110%);
+    -ms-transform: translateX(110%);
+    -o-transform: translateX(110%);
+    transform: translateX(110%);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+    -moz-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+    transform: translateX(100%);
+  }
 }
